--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^5.10.19",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "razorpay": "^2.0.6",
+    "shortid": "^2.2.16"
   }
 }
